Заверстать верхнюю часть страницы

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body, p {
   margin: 0;
   padding: 0;
@@ -5,3 +9,8 @@ body, p {
 
 @import "base/fonts";
 @import "base/colors";
+
+@import "blocks/container";
+@import "blocks/button";
+@import "blocks/menu";
+@import "blocks/header";
