Заверстать секцию 'mission'

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,5 +12,7 @@ body, p {
 
 @import "blocks/container";
 @import "blocks/button";
+@import "blocks/section-title";
 @import "blocks/menu";
 @import "blocks/header";
+@import "blocks/mission-section";
