--- a/src/sass/blocks/_mission-section.scss
+++ b/src/sass/blocks/_mission-section.scss
@@ -14,7 +14,10 @@
   }
 
   &__join-button {
-    display: inline-block;
+    display: inline-flex;
+    gap: 12px;
+    align-items: center;
+    position: relative;
     padding: 17px 0;
     margin-top: 32px;
     text-decoration: none;
@@ -26,6 +29,13 @@
     line-height: 18px;
     letter-spacing: 1px;
 
-    // to-do add an chevron to element
+    &::after {
+      content: "";
+      background-image: url("../images/icons/circle_chevron.svg");
+      background-repeat: no-repeat;
+      background-size: 22px 22px;
+      width: 22px;
+      height: 22px;
+    }
   }
 }
