Заверстать секцию 'workouts'

--- a/src/sass/blocks/_section-title.scss
+++ b/src/sass/blocks/_section-title.scss
@@ -21,4 +21,11 @@
     content: ".";
     color: $color-primary-200;
   }
+
+  &_workouts {
+    &::before {
+      background-image: url("../images/icons/calendar.svg");
+      width: 120px;
+    }
+  }
 }
