--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,3 +16,6 @@ body, p {
 @import "blocks/menu";
 @import "blocks/header";
 @import "blocks/mission-section";
+@import "blocks/image-gallery";
+@import "blocks/control-buttons";
+@import "blocks/workouts-session";
