--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,4 +18,4 @@ body, p {
 @import "blocks/mission-section";
 @import "blocks/image-gallery";
 @import "blocks/control-buttons";
-@import "blocks/workouts-session";
+@import "blocks/workouts-section";
