--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -19,3 +19,5 @@ body, p {
 @import "blocks/image-gallery";
 @import "blocks/control-buttons";
 @import "blocks/workouts-section";
+@import "blocks/price-card";
+@import "blocks/pricing-section";
