--- a/src/sass/blocks/_section-title.scss
+++ b/src/sass/blocks/_section-title.scss
@@ -35,4 +35,11 @@
       width: 122px;
     }
   }
+
+  &_community {
+    &::before {
+      background-image: url("../images/icons/speech.svg");
+      width: 135px;
+    }
+  }
 }
