--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -21,3 +21,4 @@ body, p {
 @import "blocks/workouts-section";
 @import "blocks/price-card";
 @import "blocks/pricing-section";
+@import "blocks/community-section";
