Заверстать секцию 'FAQ'

--- a/src/sass/blocks/_section-title.scss
+++ b/src/sass/blocks/_section-title.scss
@@ -42,4 +42,13 @@
       width: 135px;
     }
   }
+
+  &_faq {
+    padding-left: 0;
+    &::before {
+      background-image: none;
+      width: 0;
+      height: 0;
+    }
+  }
 }
