--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -22,3 +22,5 @@ body, p {
 @import "blocks/price-card";
 @import "blocks/pricing-section";
 @import "blocks/community-section";
+@import "blocks/collapsible-item";
+@import "blocks/faq-section";
