Заверстать нижнюю часть страницы

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -24,3 +24,4 @@ body, p {
 @import "blocks/community-section";
 @import "blocks/collapsible-item";
 @import "blocks/faq-section";
+@import "blocks/footer";
