Поправить часть относительных путей к файлам

--- a/src/sass/blocks/_collapsible-item.scss
+++ b/src/sass/blocks/_collapsible-item.scss
@@ -22,7 +22,7 @@
 
     &::after {
       content: "";
-      background-image: url("../../images/icons/circle_chevron.svg");
+      background-image: url("../images/icons/circle_chevron.svg");
       background-size: 22px 22px;
       background-repeat: no-repeat;
       transform: rotate(90deg);
