--- a/src/sass/blocks/_faq-section.scss
+++ b/src/sass/blocks/_faq-section.scss
@@ -1,7 +1,7 @@
 .faq-section {
   padding-top: 100px;
   padding-bottom: 180px;
-  background-image: url("../../images/question_background.svg");
+  background-image: url("../images/question_background.svg");
   background-position: center top;
   background-repeat: no-repeat;
 
