--- a/src/sass/blocks/_price-card.scss
+++ b/src/sass/blocks/_price-card.scss
@@ -72,7 +72,7 @@
     &::before {
       content: "";
       position: absolute;
-      background-image: url("../../images/icons/circle_check_dark.svg");
+      background-image: url("../images/icons/circle_check_dark.svg");
       background-size: 20px 20px;
       width: 20px;
       height: 20px;
@@ -101,7 +101,7 @@
     }
     .price-card__feature {
       &::before {
-        background-image: url("../../images/icons/circle_check_light.svg");
+        background-image: url("../images/icons/circle_check_light.svg");
       }
     }
   }
