Добавить (сделать работающими) относительные ссылки на секции сайта

--- a/src/sass/blocks/_community-section.scss
+++ b/src/sass/blocks/_community-section.scss
@@ -1,6 +1,5 @@
 .community-section {
-  padding-left: 33px;
-  padding-bottom: 180px;
+  padding: 90px 0 180px 33px;
 
   .container {
     display: grid;
