--- a/src/sass/blocks/_collapsible-item.scss
+++ b/src/sass/blocks/_collapsible-item.scss
@@ -14,7 +14,7 @@
     display: block;
     font-family: Inter;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 1.125rem;
     line-height: 22px;
     text-align: left;
     color: $color-neutral-500;
@@ -41,7 +41,7 @@
   &__content {
     margin-top: 16px;
     margin-right: 70px;
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 26px;
     color: $color-neutral-400;
     display: none;
