--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -30,7 +30,7 @@
     }
 
     &-description {
-      font-size: 24px;
+      font-size: 1.5rem;
       line-height: 34px;
       color: $color-neutral-200;
       margin: 32px 0;
