--- a/src/sass/base/_fonts.scss
+++ b/src/sass/base/_fonts.scss
@@ -9,46 +9,46 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 60px;
   line-height: 62px;
+  font-size: 3.75rem;
 }
 
 h2 {
-  font-size: 50px;
   line-height: 50px;
+  font-size: 3.125rem;
 }
 
 h3 {
-  font-size: 38px;
   line-height: 46px;
+  font-size: 2.375rem;
 }
 
 h4 {
-  font-size: 30px;
   line-height: 46px;
+  font-size: 1.875rem;
 }
 
 h5 {
-  font-size: 24px;
   line-height: 32px;
+  font-size: 1.5rem;
 }
 
 h6 {
-  font-size: 18px;
   line-height: 28px;
+  font-size: 1.125rem;
 }
 
 @mixin text-style-body-large {
-  font-size: 24px;
   line-height: 34px;
+  font-size: 1.5rem;
 }
 
 @mixin text-style-body-medium {
-  font-size: 20px;
   line-height: 32px;
+  font-size: 1.25rem;
 }
 
 @mixin text-style-body-small {
-  font-size: 16px;
   line-height: 26px;
+  font-size: 1rem;
 }
