--- a/src/sass/blocks/_menu.scss
+++ b/src/sass/blocks/_menu.scss
@@ -14,7 +14,7 @@
     text-decoration: none;
     color: rgba(255, 255, 255, 0.9);
     font-weight: 500;
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 18px;
     padding: 0px 10px;
     transition: 0.15s all;
