--- a/src/sass/blocks/_mission-section.scss
+++ b/src/sass/blocks/_mission-section.scss
@@ -8,7 +8,7 @@
 
   &__description {
     margin-top: 32px;
-    font-size: 20px;
+    font-size: 1.25rem;
     line-height: 32px;
     color: $color-neutral-400;
   }
@@ -25,7 +25,7 @@
     color: $color-neutral-500;
     font-family: Inter;
     font-weight: 800;
-    font-size: 14px;
+    font-size: 0.875rem;
     line-height: 18px;
     letter-spacing: 1px;
 
