--- a/src/sass/blocks/_workouts-section.scss
+++ b/src/sass/blocks/_workouts-section.scss
@@ -1,10 +1,10 @@
 .workouts-section {
-  padding: 90px 0;
+  padding: 5.625em 0;
 
   .container {
     display: flex;
     flex-direction: column;
-    row-gap: 80px;
+    row-gap: 5em;
     align-items: center;
     overflow: hidden;
   }
