--- a/src/sass/blocks/_button.scss
+++ b/src/sass/blocks/_button.scss
@@ -6,22 +6,22 @@
   border: 2px solid $color-neutral-100;
   color: $color-neutral-500;
   border-radius: 1px;
-  padding: 14px 40px;
+  padding: 1em 2.857em;
   text-transform: uppercase;
   font-weight: bold;
   font-family: Inter, sans-serif;
   font-size: 0.875rem;
-  line-height: 18px;
+  line-height: 1.286em;
   text-align: center;
-  letter-spacing: 1px;
+  letter-spacing: 0.071em;
 
   &_log-in {
     background-color: transparent;
     border: none;
     color: $color-neutral-100;
     font-size: 0.75rem;
-    line-height: 18px;
-    padding: 12px 8px;
+    line-height: 1.5em;
+    padding: 1em 0.667em;
   }
 
   &_sign-up {
@@ -29,8 +29,8 @@
     border: 2px solid $color-primary-200;
     color: $color-neutral-100;
     font-size: 0.75rem;
-    line-height: 18px;
-    padding: 12px 30px;
+    line-height: 1.5em;
+    padding: 1em 2.5em;
   }
 
   &_pricing_light {
