--- a/src/sass/blocks/_collapsible-item.scss
+++ b/src/sass/blocks/_collapsible-item.scss
@@ -1,9 +1,9 @@
 .collapsible-item {
-  width: 764px;
+  width: 47.75em;
   background: #FFFFFF;
   border: 1px solid rgba(19, 19, 22, 0.1);
   border-radius: 2px;
-  padding: 20px 30px;
+  padding: 1.25em 1.875em;
 
   &__button {
     width: 100%;
@@ -15,7 +15,7 @@
     font-family: Inter;
     font-weight: bold;
     font-size: 1.125rem;
-    line-height: 22px;
+    line-height: 1.222em;
     text-align: left;
     color: $color-neutral-500;
     position: relative;
@@ -23,11 +23,11 @@
     &::after {
       content: "";
       background-image: url("../images/icons/circle_chevron.svg");
-      background-size: 22px 22px;
+      background-size: 1.222em 1.222em;
       background-repeat: no-repeat;
       transform: rotate(90deg);
-      width: 22px;
-      height: 22px;
+      width: 1.222em;
+      height: 1.222em;
       position: absolute;
       right: 0;
       top: 0;
@@ -39,10 +39,10 @@
   }
 
   &__content {
-    margin-top: 16px;
-    margin-right: 70px;
+    margin-top: 1em;
+    margin-right: 4.375em;
     font-size: 1rem;
-    line-height: 26px;
+    line-height: 1.625em;
     color: $color-neutral-400;
     display: none;
   }
