--- a/src/sass/blocks/_control-buttons.scss
+++ b/src/sass/blocks/_control-buttons.scss
@@ -1,16 +1,17 @@
 .control-buttons {
   display: flex;
-  column-gap: 32px;
+  gap: 2em;
 
   &__left, &__right {
-    height: 40px;
-    width: 40px;
+    height: 2.5em;
+    width: 2.5em;
     background: none;
     border: none;
     padding: 0;
     cursor: pointer;
 
     &-img {
+      width: 100%;
       z-index: -1;
     }
   }
