--- a/src/sass/blocks/_faq-section.scss
+++ b/src/sass/blocks/_faq-section.scss
@@ -1,6 +1,6 @@
 .faq-section {
-  padding-top: 100px;
-  padding-bottom: 180px;
+  padding-top: 6.25em;
+  padding-bottom: 11.25em;
   background-image: url("../images/question_background.svg");
   background-position: center top;
   background-repeat: no-repeat;
@@ -17,6 +17,6 @@
     list-style-type: none;
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 1em;
   }
 }
