--- a/src/sass/blocks/_pricing-section.scss
+++ b/src/sass/blocks/_pricing-section.scss
@@ -1,5 +1,5 @@
 .pricing-section {
-  padding: 90px 0;
+  padding: 5.625em 0;
 
   .container {
     display: flex;
@@ -11,7 +11,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    column-gap: 32px;
-    margin-top: 80px;
+    column-gap: 2em;
+    margin-top: 5em;
   }
 }
