Мелкие правки по размерам элементов.

--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -10,6 +10,7 @@
     height: 38.625em;
     position: absolute;
     background-image: url("../images/footer_bg.jpg");
+    background-size: 31.25em 38.625em;
     background-repeat: no-repeat;
     z-index: 1;
     top: -5em;
