--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -8,6 +8,13 @@
   background-color: $color-neutral-500;
   color: white;
 
+  @media (max-width: 1250px) {
+    padding: 1.25em 4em;
+  }
+  @media (max-width: 1000px) {
+    padding: 1.25em 2.5em;
+  }
+
   &__top {
     display: flex;
     justify-content: space-between;
@@ -16,6 +23,7 @@
 
   &__auth {
     display: flex;
+    align-items: center;
     gap: 1em;
   }
 
