--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,6 +4,16 @@
 
 html {
   font-size: 16px;
+
+  @media (max-width: 1350px) {
+    font-size: 15px;
+  }
+  @media (max-width: 1250px) {
+    font-size: 14px;
+  }
+  @media (max-width: 950px) {
+    font-size: 13px;
+  }
 }
 
 body, p {
