--- a/src/sass/blocks/_control-buttons.scss
+++ b/src/sass/blocks/_control-buttons.scss
@@ -3,8 +3,8 @@
   gap: 2em;
 
   &__left, &__right {
-    height: 2.5em;
-    width: 2.5em;
+    height: 40px;
+    width: 40px;
     background: none;
     border: none;
     padding: 0;
