--- a/src/sass/blocks/_community-section.scss
+++ b/src/sass/blocks/_community-section.scss
@@ -1,12 +1,22 @@
 .community-section {
   padding: 5.625em 0 11.25em 2.063em;
 
+  @media (max-width: 840px) {
+    padding: 5.625em 0 11.25em 0;
+  }
+
   .container {
     display: grid;
     grid-template-columns: 23.438em 1fr;
     grid-template-areas: "title    gallery"
                          "controls gallery";
-    column-gap: 7em;
+    gap: 7em;
+
+    @media (max-width: 840px) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
   }
 
   .section-title {
@@ -21,5 +31,8 @@
     grid-area: controls;
     align-self: flex-end;
     margin-left: 4.375em;
+    @media (max-width: 840px) {
+      margin-right: 4.375em
+    }
   }
 }
