--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -15,6 +15,10 @@
     z-index: 1;
     top: -5em;
     left: 17%;
+    @media (max-width: 840px) {
+      left: 0;
+      background-size: 24em auto;
+    }
   }
 
   &__main {
@@ -22,6 +26,7 @@
     z-index: 5;
     margin-left: 48%;
     width: 31.25em;
+    max-width: 50vw;
   }
 
   &__title {
