--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,6 +14,9 @@ html {
   @media (max-width: 950px) {
     font-size: 13px;
   }
+  @media (max-width: 840px) {
+    font-size: 12px;
+  }
 }
 
 body, p {
