--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -4,6 +4,10 @@
   background-color: $color-neutral-500;
   color: white;
 
+  @media (max-width: 500px) {
+    padding: 6.625em 2em 3.25em 2em;
+  }
+
   &::before {
     content: "";
     width: 31.25em;
@@ -15,7 +19,11 @@
     z-index: 1;
     top: -5em;
     left: 17%;
-    @media (max-width: 840px) {
+    @media (max-width: 800px) {
+      left: 5%;
+      background-size: 28em auto;
+    }
+    @media (max-width: 550px) {
       left: 0;
       background-size: 24em auto;
     }
@@ -26,12 +34,29 @@
     z-index: 5;
     margin-left: 48%;
     width: 31.25em;
-    max-width: 50vw;
+    max-width: 60vw;
+
+    @media (max-width: 800px) {
+      margin-left: 28%;
+    }
+    @media (max-width: 600px) {
+      margin-left: 24%;
+    }
+    @media (max-width: 500px) {
+      margin-left: 18%;
+    }
   }
 
   &__title {
     font-size: 3.75rem;
     line-height: 1.033em;
+
+    @media (max-width: 600px) {
+      font-size: 3rem;
+    }
+    @media (max-width: 400px) {
+      font-size: 2.5rem;
+    }
 
     &-highlight {
       color: $color-primary-200;
@@ -49,6 +74,10 @@
     margin-top: 18.75em;
     display: flex;
     justify-content: space-between;
+
+    @media (max-width: 550px) {
+      margin-top: 4em;
+    }
 
     &-copyright {
       color: $color-neutral-300;
