--- a/src/sass/blocks/_price-card.scss
+++ b/src/sass/blocks/_price-card.scss
@@ -38,6 +38,13 @@
     justify-content: center;
     align-items: center;
   }
+  @media (max-width: 600px) {
+    column-gap: 4em;
+  }
+  @media (max-width: 400px) {
+    column-gap: 1em;
+    padding: 2.75em 1em;
+  }
 
   &__name {
     grid-area: name;
