--- a/src/sass/blocks/_price-card.scss
+++ b/src/sass/blocks/_price-card.scss
@@ -39,9 +39,11 @@
     align-items: center;
   }
   @media (max-width: 600px) {
+    width: 80vw;
     column-gap: 4em;
   }
   @media (max-width: 400px) {
+    width: 85vw;
     column-gap: 1em;
     padding: 2.75em 1em;
   }
